--- a/conteudo/country/main.html
+++ b/conteudo/country/main.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fsociety</title>
     <link rel="stylesheet" href="../styles/country_style-main.css">
+    <link rel="icon" href="../imagens/anonimo.png" type="image/x-icon">
 </head>
 <body>
 
