--- a/conteudo/childs/hats.html
+++ b/conteudo/childs/hats.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mr.Elliot</title>
     <link rel="stylesheet" href="../styles/country_style-main.css">
+    <link rel="shortcut icon" href="../../imagens/hacker.png" type="image/x-icon">
 </head>
 <body>
     <iframe src="../country/menu.html" frameborder="0" width="100%"></iframe>
