--- a/conteudo/country/conceitos/coleta.html
+++ b/conteudo/country/conceitos/coleta.html
@@ -6,6 +6,7 @@
     <title>Fsociety</title>
     <link rel="stylesheet" href="../../styles/country_style-main.css">
     <link rel="stylesheet" href="../../styles/child_style-segurança.css">
+    <link rel="shortcut icon" href="../../../imagens/hacker.png" type="image/x-icon">
 </head>
 <body>
     <iframe src="../menu.html" frameborder="0" width="100%"></iframe>
@@ -77,11 +78,17 @@ Nmap done: 1 IP address (1 host up) scanned in 8.18 seconds
             propria máquina para analizar as portas abertas e demais informações.
         </p>
     </section>
+    <section class="container-content">
+        <h2>...</h2>
+        <p>
+            Com esse exemplo terminamos o conteúdo na linha principal do site. Veja os itens contidos 
+            no menu para se aprofundar mais no conteúdo.
+        </p>
+    </section>
 
     <nav class="menu-final">
         <ul class="lista-menu-final">
             <li><a href="../SO/linux.html" target="_self">Anterior</a></li>
-            <li><a href="#" target="_self">Próximo</a></li>
         </ul>
     </nav>
     <footer>
