--- a/conteudo/menu/ferramentas.html
+++ b/conteudo/menu/ferramentas.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fsociety</title>
     <link rel="stylesheet" href="../styles/country_style-main.css">
+    <link rel="shortcut icon" href="../../imagens/hacker.png" type="image/x-icon">
 </head>
 <body>
 
@@ -12,7 +13,7 @@
 
     <section class="container-content">
         <p>
-            Nessa aba estão localizadas as ferramentas mensionadas ao longo do conteúdo
+            Nessa aba estão localizadas algumas das ferramentas mensionadas nos tutoriais e referências
             do site (lembrando que estamos falando do ambiente linux).
         </p>
     </section>
