--- a/conteudo/menu/informacoes.html
+++ b/conteudo/menu/informacoes.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fsociety</title>
     <link rel="stylesheet" href="../styles/country_style-main.css">
+    <link rel="shortcut icon" href="../../imagens/hacker.png" type="image/x-icon">
 </head>
 <body>
 
@@ -13,8 +14,16 @@
     <main>
         <section class="container-content">
             <p>
-                Nessa aba estão localizadas as informações referentes ao conteúdo e distribuição
+                Nessa aba estão localizadas as informações referentes ao conteúdo e organização
                 do site.
+            </p>
+        </section>
+        <section class="container-content">
+            <h2>$Resumo</h2>
+            <p>
+                Esse site tem como objetivo repassar um pouco de conhecimento acerca do que é o hacking
+                e a ciência da computação em geral, isso é feito através da linha de conteúdo principal
+                e das abas de menu.
             </p>
         </section>
         <section class="container-content" id="criadores">
