--- a/conteudo/menu/tutoriais.html
+++ b/conteudo/menu/tutoriais.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fsociety</title>
     <link rel="stylesheet" href="../styles/country_style-main.css">
+    <link rel="shortcut icon" href="../../imagens/hacker.png" type="image/x-icon">
 </head>
 <body>
 
@@ -57,6 +58,30 @@
                 <strong>
                     <a href="https://drive.google.com/file/d/1a8kNcvnWO3Hm9_Gucg279sOnlbUZSHRD/view?usp=drive_link">
                         Endereçamento_de_memória.asm
+                    </a>
+                </strong>
+                <br>
+                <strong>
+                    <a href="https://drive.google.com/file/d/1IHD2aZug5tnpnJQSenguZSEgloQYYrY5/view?usp=drive_link">
+                        Hash_na_pratica.bin
+                    </a>
+                </strong>
+                <br>
+                <strong>
+                    <a href="https://drive.google.com/file/d/1K42pzSun91phA1jt_HPxLGQJ81F5FuJU/view?usp=drive_link">
+                        Introducao_ao_wireshark.class
+                    </a>
+                </strong>
+                <br>
+                <strong>
+                    <a href="https://drive.google.com/file/d/1fDp7hfTBV5Q91nVO-o1dmAhfERs44Z8Z/view?usp=drive_link">
+                        ettercap-ng.elf
+                    </a>
+                </strong>
+                <br>
+                <strong>
+                    <a href="https://drive.google.com/file/d/1hmXvMhZ5I0JykGybFpwMZiFpyCCWJzq5/view?usp=drive_link">
+                        Portas_de_email-server.exe
                     </a>
                 </strong>
             </div>
