--- a/conteudo/country/seguranca/ips.html
+++ b/conteudo/country/seguranca/ips.html
@@ -6,6 +6,7 @@
     <title>Fsociety</title>
     <link rel="stylesheet" href="../../styles/country_style-main.css">
     <link rel="stylesheet" href="../../styles/child_style-segurança.css">
+    <link rel="shortcut icon" href="../../../imagens/hacker.png" type="image/x-icon">
 </head>
 <body>
     <iframe src="../menu.html" frameborder="0" width="100%"></iframe>
